--- a/servidor/.classpath
+++ b/servidor/.classpath
@@ -33,5 +33,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/easysocket.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ClassesDominio"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
