--- a/sincronizador/.classpath
+++ b/sincronizador/.classpath
@@ -23,12 +23,8 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-8-oracle"/>
-	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/servidor/lib/easysocket.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/ClassesDominio"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/servidor/lib/easysocket.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
